# zero2prod-actix

./: Cargo.toml  README.md  configuration.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscription.rs
tests/: health_check.rs
